--- a/config/database.yml
+++ b/config/database.yml
@@ -18,14 +18,28 @@ default: &default
   host: <%= ENV.fetch("MYSQL_HOST", "db") %>
 
 development:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: <%= ENV.fetch("DB_HOST", "127.0.0.1")  %>
+  username: root
+  password: <%= ENV.fetch("DB_PASS") %>
   database: myapp_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: <%= ENV.fetch("DB_HOST", "127.0.0.1")  %>
+  username: root
+  password: <%= ENV.fetch("DB_PASS") %>
   database: myapp_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
